--- a/Yumiko.SelfProtection/Yumiko.SelfProtection.csproj
+++ b/Yumiko.SelfProtection/Yumiko.SelfProtection.csproj
@@ -42,10 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Strobarried\Bind.cs" />
+    <Compile Include="Strobarried\Strobarried.cs" />
     <Compile Include="WMI\WMIProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WMI\WMISubject.cs" />
-    <Compile Include="Xipher.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
