--- a/Yumiko.SelfProtection/Yumiko.SelfProtection.csproj
+++ b/Yumiko.SelfProtection/Yumiko.SelfProtection.csproj
@@ -31,8 +31,9 @@
   </PropertyGroup>
   <PropertyGroup />
   <ItemGroup>
-    <Reference Include="Bind">
-      <HintPath>..\Bind.dll</HintPath>
+    <Reference Include="Bind, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Yumiko.SelfProtection.Test\bin\Debug\Bind.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -49,6 +50,9 @@
     <Compile Include="WMI\WMIProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WMI\WMISubject.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Initialization\Bind.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
