--- a/Yumiko.SelfProtection/Yumiko.SelfProtection.csproj
+++ b/Yumiko.SelfProtection/Yumiko.SelfProtection.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Script\ShellScript.cs" />
     <Compile Include="Strobarried\Extension.cs" />
     <Compile Include="Strobarried\Strobarried.cs" />
     <Compile Include="WMI\WMIProvider.cs" />
