--- a/Yumiko.SelfProtection/Yumiko.SelfProtection.csproj
+++ b/Yumiko.SelfProtection/Yumiko.SelfProtection.csproj
@@ -34,7 +34,7 @@
   <ItemGroup>
     <Reference Include="Bind, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Yumiko.SelfProtection.Test\bin\Debug\Bind.dll</HintPath>
+      <HintPath>..\Bind.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
