--- a/Yumiko.SelfProtection.Test/Yumiko.SelfProtection.Test.csproj
+++ b/Yumiko.SelfProtection.Test/Yumiko.SelfProtection.Test.csproj
@@ -35,15 +35,10 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Management" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-    <Reference Include="Yumiko.SelfProtection">
+    <Reference Include="Yumiko.SelfProtection, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Yumiko.SelfProtection\bin\Debug\Yumiko.SelfProtection.dll</HintPath>
     </Reference>
   </ItemGroup>
