--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -52,13 +52,13 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Yumiko.SelfProtection">
+      <HintPath>..\Yumiko.SelfProtection\bin\Debug\Yumiko.SelfProtection.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Verify\Extension.cs" />
-    <Compile Include="Verify\Validator.cs" />
-    <Compile Include="Verify\VerifyAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
