--- a/Yumiko.SelfProtection/Yumiko.SelfProtection.csproj
+++ b/Yumiko.SelfProtection/Yumiko.SelfProtection.csproj
@@ -36,20 +36,26 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Hydra.cs" />
     <Compile Include="Script\ShellScript.cs" />
     <Compile Include="Strobarried\Evaluation.cs" />
     <Compile Include="Strobarried\Extension.cs" />
     <Compile Include="Strobarried\Strobarried.cs" />
-    <Compile Include="Kryanbarried\Extension.cs" />
-    <Compile Include="Kryanbarried\KryanbarriedAttribute.cs" />
-    <Compile Include="Kryanbarried\Validator.cs" />
-    <Compile Include="WMI\WMIProvider.cs" />
+    <Compile Include="Infrastructure\Transpiler`1.cs" />
+    <Compile Include="Infrastructure\ITranspiler`1.cs" />
+    <Compile Include="Infrastructure\Transpiler.cs" />
+    <Compile Include="Infrastructure\Wmi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WMI\WMISubject.cs" />
+    <Compile Include="Infrastructure\WmiSubject.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
